syntax = "proto3";

package test;

// ==========================================================
// 测试用消息
// ==========================================================
message TestEchoACK
{
    string Content = 1;
}